--- a/style.css
+++ b/style.css
@@ -5,31 +5,51 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: Nunito;
+    background-color: #88afdb;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .container {
-    background-color: white;
+    background-color: #c8daf0;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 700px;
     text-align: center;
 }
 
-h1 {
-    font-size: 24px;
+
+
+.subtitle {    
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
-p {
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.titleSup {
     font-size: 18px;
-    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.titlePrincipal {
+    text-align: center;
+    font-size: 55px;
+    color: #003674;
+    font-weight: bold;
+    font-family: Dancing Script;
+    
 }
 
 #gridNumeros {
@@ -39,8 +59,20 @@ p {
     max-height: 400px;
     overflow-y: auto;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #ccc; 
     border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff; 
+}
+
+#numerosSelecionados {
+    margin-top: 20px;
+}
+
+#valorTotal {
+    font-weight: 700;
+    color: rgb(235, 62, 62);
+    font-size: 22px;
 }
 
 button {
@@ -49,15 +81,16 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 button.disponivel {
-    background-color: #28a745;
+    background-color: #4A90E2;
     color: white;
 }
 
 button.selecionado {
-    background-color: #014e8d;
+    background-color: #003674;
     color: white;
 }
 
@@ -70,14 +103,16 @@ button.indisponivel {
 form {
     margin-top: 20px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #fff;
     border-radius: 10px;
     border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 form h2 {
     margin-bottom: 15px;
     font-size: 20px;
+    color: #024da3;
 }
 
 .form-group {
@@ -88,6 +123,7 @@ label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
+    color: #024da3;
 }
 
 input[type="text"],
@@ -97,12 +133,19 @@ input[type="tel"] {
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: #f4f7fb; 
+}
+
+
+input[type="text"]:focus,
+input[type="tel"]:focus {
+    border-color: #4A90E2; /* Azul claro ao focar */
 }
 
 button[type="submit"] {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #4A90E2;;
     color: white;
     border: none;
     border-radius: 5px;
@@ -110,5 +153,5 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #003674;
 }
