--- a/style.css
+++ b/style.css
@@ -4,12 +4,19 @@
     box-sizing: border-box;
 }
 
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 body {
     font-family: Nunito;
     background-color: #88afdb;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh; 
+    overflow-x: hidden; 
 }
 
 .container {
@@ -18,7 +25,9 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 700px;
+    max-width: 90vw; 
     text-align: center;
+    overflow: hidden;
 }
 
 
@@ -46,10 +55,10 @@ body {
 
 .titlePrincipal {
     text-align: center;
-    font-size: 55px;
     color: #003674;
     font-weight: bold;
     font-family: Dancing Script;
+    font-size: 6vw;
     
 }
 
@@ -108,6 +117,7 @@ form {
     border-radius: 10px;
     border: 1px solid #ddd;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 90vw; 
 }
 
 form h2 {
