--- a/sistema-rifa/style.css
+++ b/sistema-rifa/style.css
@@ -62,6 +62,19 @@ body {
     
 }
 
+.display-numeros{
+    padding-top: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #fff; 
+}
+
+.display-numeros h2{
+    margin-bottom: 5px;
+    font-size: 20px;
+    color: #024da3;
+}
+
 #gridNumeros {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -70,9 +83,6 @@ body {
     overflow-y: auto;
     padding: 10px;
     border: 1px solid #ccc; 
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #fff; 
 }
 
 #numerosSelecionados {
@@ -118,9 +128,26 @@ form {
     border: 1px solid #ddd;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 90vw; 
+    margin-bottom: 20px;
+}
+
+.display-pagamento {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 90vw; 
 }
 
 form h2 {
+    margin-bottom: 15px;
+    font-size: 20px;
+    color: #024da3;
+}
+
+.display-pagamento h2 {
     margin-bottom: 15px;
     font-size: 20px;
     color: #024da3;
@@ -158,7 +185,7 @@ input[type="tel"]:focus {
     border-color: #4A90E2; /* Azul claro ao focar */
 }
 
-button[type="submit"] {
+.confirmButton {
     padding: 10px 20px;
     font-size: 16px;
     background-color: #4A90E2;;
@@ -166,8 +193,4 @@ button[type="submit"] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
-
-button[type="submit"]:hover {
-    background-color: #003674;
 }
