--- a/sistema-rifa/style.css
+++ b/sistema-rifa/style.css
@@ -11,7 +11,7 @@ html, body {
 
 body {
     font-family: Nunito;
-    background-color: #88afdb;
+    background-color: #E53935;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@ body {
 }
 
 .container {
-    background-color: #c8daf0;
+    background-color:  #FFF8E1;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -45,6 +45,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    position: sticky
 }
 
 .titleSup {
@@ -55,9 +56,9 @@ body {
 
 .titlePrincipal {
     text-align: center;
-    color: #003674;
+    color: 	#4E342E;
     font-weight: bold;
-    font-family: Dancing Script;
+    font-family: "Luckiest Guy", cursive;
     font-size: 10vw;
     
 }
@@ -72,7 +73,7 @@ body {
 .display-numeros h2{
     margin-bottom: 5px;
     font-size: 20px;
-    color: #024da3;
+    color: #4E342E;
 }
 
 #gridNumeros {
@@ -81,8 +82,17 @@ body {
     gap: 10px;
     max-height: 400px;
     overflow-y: auto;
-    padding: 10px;
+    padding: 15px;
+    font-size: 18px;
     border: 1px solid #ccc; 
+}
+
+#gridNumeros::-webkit-scrollbar {
+    width: 6px;
+}
+#gridNumeros::-webkit-scrollbar-thumb {
+    background-color: #E53935;
+    border-radius: 10px;
 }
 
 #numerosSelecionados {
@@ -105,20 +115,20 @@ button {
 }
 
 button.disponivel {
-    background-color: #4A90E2;
-    color: white;
+    background-color: #FDD835;
+    color: rgb(81, 74, 74);
 }
 
 button.selecionado {
-    background-color: #003674;
-    color: white;
+    background-color: #b0920d;
+    color: rgb(81, 74, 74);
 }
 
 button.indisponivel {
     background-color: #ccc;
     color: #666;
     cursor: not-allowed;
-}
+}z
 
 form {
     margin-top: 20px;
@@ -144,13 +154,13 @@ form {
 form h2 {
     margin-bottom: 15px;
     font-size: 20px;
-    color: #024da3;
+    color: #4E342E;
 }
 
 .display-pagamento h2{
     margin-bottom: 15px;
     font-size: 20px;
-    color: #024da3;
+    color: #4E342E;
 }
 
 .form-group {
@@ -166,7 +176,7 @@ label {
     display: block;
     margin-bottom: 5px;
     font-weight: bold;
-    color: #024da3;
+    color: #4E342E;
 }
 
 input[type="text"],
@@ -182,13 +192,13 @@ input[type="tel"] {
 
 input[type="text"]:focus,
 input[type="tel"]:focus {
-    border-color: #4A90E2; /* Azul claro ao focar */
+    border-color: #4E342E; /* Azul claro ao focar */
 }
 
 .confirmButton {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #4A90E2;;
+    background-color: #43A047;;
     color: white;
     border: none;
     border-radius: 5px;
@@ -213,7 +223,7 @@ input[type="tel"]:focus {
     margin: 15% auto; /* 15% do topo e centralizado */
     padding: 20px;
     border: 1px solid #888;
-    color: #024da3;
+    color: #4E342E;
     width: 80%; /* Largura */
     max-width: 500px; /* Largura máxima */
 }
@@ -233,7 +243,7 @@ input[type="tel"]:focus {
 
 #confirmarModal {
     padding: 10px 20px; 
-    background-color: #4A90E2;
+    background-color: #43A047;
     color: white; 
     border: none; 
     border-radius: 5px;
